election-commission/ec.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    apps: election-commission
    type: "roost-example"
  name: election-commission
spec: 
  selector: 
    app: election-commission
    type: "roost-example"
  ports:
  - name: election-commission
    port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: election-commission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: election-commission
      type: "roost-example"
  template:
    metadata:
      labels:
        app: election-commission
        type: "roost-example"
    spec:
      containers:
      - name: election-commission
        image: local-registry:5002/election-commission:latest
        stdin: true
        tty: true
        ports:
        - containerPort: 80
